Add html and css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign up form</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+  <div class="main">
+    <div class="left">
+      <div class="transparent">
+        <p>Who are you?</p>
+      </div>
+    </div>
+    <div class="right">
+      <div class="one">
+        <p>Are you real?
+          Even if we say that everything we see is real are you the real you?</p>
+        <p>find out in this form</p>
+      </div>
+      <div class="two">
+        <form action="">
+          <div class="form">
+            <p>
+              <label for="first-name">First Name</label>
+            </p>
+            <p>
+              <input type="text" name="First Name" id="first-name" />
+            </p>
+            <p>
+              <label for="last-name">Last Name</label>
+            </p>
+            <p>
+              <input type="text" name="Last Name" id="last-name" />
+            </p>
+          </div>
+          <div class="form">
+            <p>
+              <label for="email">Email</label>
+            </p>
+            <p>
+              <input type="text" name="Email" id="email" />
+            </p>
+            <p>
+              <label for="phone-num">Phone Number</label>
+            </p>
+            <p>
+              <input type="text" name="Phone Number" id="phone-num" />
+            </p>
+          </div>
+          <div class="form">
+            <p>
+              <label for="password1">Password</label>
+            </p>
+            <p>
+              <input type="text" name="Password" id="password1" />
+            </p>
+            <p>
+              <label for="password2">Confirm Password</label>
+            </p>
+            <p>
+              <input type="text" name="Confirm Password" id="password2" />
+            </p>
+          </div>
+        </form>
+      </div>
+      <div class="three">
+        <p>button goes here</p>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
