Add to layout of the form

--- a/index.html
+++ b/index.html
@@ -22,48 +22,61 @@
         <p>find out in this form</p>
       </div>
       <div class="two">
+        <h1>sign up</h1>
         <form action="">
           <div class="form">
-            <p>
-              <label for="first-name">First Name</label>
-            </p>
-            <p>
-              <input type="text" name="First Name" id="first-name" />
-            </p>
-            <p>
-              <label for="last-name">Last Name</label>
-            </p>
-            <p>
-              <input type="text" name="Last Name" id="last-name" />
-            </p>
+            <div class="form1">
+              <p>
+                <label for="first-name">First Name</label>
+              </p>
+              <p>
+                <input type="text" name="First Name" id="first-name" />
+              </p>
+            </div>
+            <div class="form1">
+              <p>
+                <label for="last-name">Last Name</label>
+              </p>
+              <p>
+                <input type="text" name="Last Name" id="last-name" />
+              </p>
+            </div>
           </div>
           <div class="form">
-            <p>
-              <label for="email">Email</label>
-            </p>
-            <p>
-              <input type="text" name="Email" id="email" />
-            </p>
-            <p>
-              <label for="phone-num">Phone Number</label>
-            </p>
-            <p>
-              <input type="text" name="Phone Number" id="phone-num" />
-            </p>
+            <div class="form1">
+              <p>
+                <label for="email">Email</label>
+              </p>
+              <p>
+                <input type="text" name="Email" id="email" />
+              </p>
+            </div>
+            <div class="form1">
+              <p>
+                <label for="phone-num">Phone Number</label>
+              </p>
+              <p>
+                <input type="text" name="Phone Number" id="phone-num" />
+              </p>
+            </div>
           </div>
           <div class="form">
-            <p>
-              <label for="password1">Password</label>
-            </p>
-            <p>
-              <input type="text" name="Password" id="password1" />
-            </p>
-            <p>
-              <label for="password2">Confirm Password</label>
-            </p>
-            <p>
-              <input type="text" name="Confirm Password" id="password2" />
-            </p>
+            <div class="form1">
+              <p>
+                <label for="password1">Password</label>
+              </p>
+              <p>
+                <input type="text" name="Password" id="password1" />
+              </p>
+            </div>
+            <div class="form1">
+              <p>
+                <label for="password2">Confirm Password</label>
+              </p>
+              <p>
+                <input type="text" name="Confirm Password" id="password2" />
+              </p>
+            </div>
           </div>
         </form>
       </div>
