--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="two">
         <h1>sign up</h1>
-        <form action="">
+        <form action="http://127.0.0.1:5500/index.html/ghrdsjio">
           <div class="form">
             <div class="form1">
               <p>
@@ -66,7 +66,7 @@
                 <label for="password1">Password</label>
               </p>
               <p>
-                <input type="text" name="Password" id="password1" />
+                <input type="password" name="Password" id="password1" />
               </p>
             </div>
             <div class="form1">
@@ -74,14 +74,16 @@
                 <label for="password2">Confirm Password</label>
               </p>
               <p>
-                <input type="text" name="Confirm Password" id="password2" />
+                <input type="password" name="Confirm Password" id="password2" />
               </p>
             </div>
           </div>
         </form>
       </div>
       <div class="three">
-        <p>button goes here</p>
+        <input type="submit" value="This is a submit button" class="submit" />
+
+        <p>Already have an account? <span class="login">Log in</span>
       </div>
     </div>
   </div>
