Change text and edit css padding

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <div class="main">
     <div class="left">
       <div class="transparent">
-        <p>Who are you?</p>
+        <p>Website</p>
       </div>
     </div>
     <div class="right">
       <div class="one">
-        <p>Are you real?
-          Even if we say that everything we see is real are you the real you?</p>
-        <p>find out in this form</p>
+        <p>This is not a real service! Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Aperiam totam dolores vitae obcaecati eaque hic nulla odio qui atque inventore?</p>
+        <p>Fill out in form</p>
       </div>
       <div class="two">
         <h1>sign up</h1>
-        <form action="http://127.0.0.1:5500/index.html/ghrdsjio">
+        <form action="">
           <div class="form">
             <div class="form1">
               <p>
