Update input to button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </form>
       </div>
       <div class="three">
-        <input type="submit" value="This is a submit button" class="submit" />
+        <button type="submit"  class="submit">This is a submit button</button>
 
         <p>Already have an account? <span class="login">Log in</span>
       </div>
